Add the following elements to the file

--- a/css/main.css
+++ b/css/main.css
@@ -12,17 +12,13 @@ html {
 }
 
 .btn-light {
-  background-color: transparent;
-}
-
-.btn-light {
   background-color: lightgreen;
   border-color: lightgreen;
 }
 
 .btn:hover {
   background-color: darkgreen;
-  border-color: lightgreen;
+  border-color: darkgreen;
 }
 
 .btn-ghost:hover {
